--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.7.11",
+		"apollo-link-http": "^1.5.17",
 		"eslint": "8.37.0",
 		"eslint-config-next": "13.2.4",
 		"graphql": "^16.6.0",
+		"html-react-parser": "^3.0.16",
 		"next": "13.2.4",
 		"qs": "^6.11.1",
 		"react": "18.2.0",
